# Bazzar_team_test

./: bazaar_plan.md  pyproject.toml  start-local.bat  start-local.sh
docs/specs/: phase_0.md  phase_1.md  phase_4_api_contract.md  phase_5.md  phase_6_enchantment_system.md  readme.md
scripts/: local-e2e.ps1
src/minimal_sim_core/: __init__.py  api.py  constants.py  contract_examples.py  damage_pipeline.py  event.py  event_types.py  main.py  metrics.py  periodic_effect.py  schema.py  schema_export.py  server.py  simulation_core.py  timeline.py  world_state.py
src/minimal_sim_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_entry.py  test_damage_pipeline.py  test_enchantment_e2e.py  test_periodic_effects.py  test_remaining_enchantments.py  test_schema_v6.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: main.tsx  vite-env.d.ts
web/src/components/: ErrorBoundary.tsx
web/src/components/config/: ConfigPanel.tsx  GlobalConfigForm.tsx  LoadoutManager.tsx  SubmitSimulationButton.tsx  UnitConfigForm.tsx
web/src/components/results/: CombatTimelineChart.tsx  DebugTimelineTable.tsx  (+2 more)
web/src/data/: item_catalog.ts
web/src/lib/: api-client.ts  enchantment-mapper.ts  error-mapper.ts  persistence.ts
web/src/store/: config-store.ts  result-store.ts  toast-store.ts
web/src/types/: sim.ts
web/tests/: config-form.test.tsx  enchantment-mapper.test.ts  persistence-flow.test.tsx  result-visualization.test.tsx
web/tests/e2e/: bridge.spec.ts
(+4 files in other folders)
