[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-sim-core"
version = "0.1.0"
description = "Deterministic headless combat simulation core"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["jsonschema>=4.0.0"]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
run-simulation = "minimal_sim_core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
